patch: final fixes to image height on mobile for feature cards and margin around button icon

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_buttons.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_buttons.scss
@@ -22,7 +22,7 @@
     }
 
     &_icon {
-        margin-right: 0.5em;
+        margin: 0 0.5em;
     }
 
     &--full {
