--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_featureCard.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_featureCard.scss
@@ -109,7 +109,6 @@
 
     &__image {
         width: 100%;
-        min-height: 300px;
         object-fit: cover;
         object-position: top;
         border-radius: 3px;
@@ -118,8 +117,9 @@
             height: 300px;
         }
 
-        @media #{$tablet} {
-            max-height: 450px;
+        @media #{$tablet, $mobile} {
+            min-height: 150px;
+            max-height: 400px;
         }
     }
 }
